# narya

./: .gitattributes  .gitignore  .ocamlformat  .readthedocs.yaml  PHASE_7_FINDINGS.md  PHASE_7_PLAN.md  README.md  REFACTOR_PLAN.md  dune-project  flake.nix
.github/workflows/: build.yml  build_docs.yml
ctags/: narya.ctags
docs/source/: built-in-types.rst  canonical-types.rst  codata-types.rst  community.rst  conf.py  contributing.rst  data-types.rst  discrete.rst  displayed.rst  external.rst  higher-types.rst  hott.rst  imports-and-scoping.rst  index.rst  installation.rst  interactive.rst  modal-parametricity.rst  modal.rst  mutual-definitions.rst  names-and-notations.rst  nominal.rst  observational.rst  parametric-observational-type-theory.rst  parametricity.rst  record-types.rst  remarks.rst  top-level-interface.rst  typechecking.rst
js/: jsnarya.ml
lib/core/: EQUAL.md  REMOVE_KEYS.md  act.ml  act.mli  annotate.ml  annotate.mli  bindsome.ml  canonical_display.ml  check.ml  command.ml  constant.ml  constant.mli  ctx.ml  degctx.ml  discrete.ml  domvars.ml  dump.ml  dune  energy.ml  env.ml  equal.ml  fibrancy.ml  field.ml  field.mli  global.ml  global.mli  link.ml  meta.ml  meta.mli  metadef.ml  norm.ml  origin.ml  origin.mli  positivity.ml  printable.ml  raw.ml  readback.ml  reporter.ml  status.ml  subtype.ml  (+7 more)
lib/dim/: README.md  arith.ml  bwsface.ml  bwtface.ml  (+24 more)
lib/hott/: bootstrap.ml  dune  fibrancy.ny  hott.ml  io.ml  isfibrant.ny  visible.ny
lib/parser/: builtins.ml  command.ml  display.ml  dune  eternity.ml  eternity.mli  glue.ml  history.ml  hott-hidden.ny  hott.ml  lexer.ml  names.ml  names.mli  notation.ml  notation.mli  options.ml  parameter.ml  parse.ml  pi.ml  postprocess.ml  print.ml  scope.ml  scope.mli  situation.ml  token.ml  unparse.ml  user.ml  user2.ml
lib/top/: dune  execute.ml  top.ml
proofgeneral/: narya-syntax.el  narya.el
(+308 files in other folders)
