(rule
  (deps (universe))
  (action
    (with-stdout-to version.txt
      (progn
        (system "(git show -s --format=%h 2>/dev/null || echo $GIT_COMMIT) | tr -d '\n'")))))

(library
  (name top)
  (public_name narya.top)
  (libraries core parser)
  (preprocess (pps ppx_blob))
  (preprocessor_deps
    (file version.txt)))
